# adventofcode_vala

./: meson.build
2015/: .gitignore
2015/input/: test.txt
2015/src/: day_03.vala  day_04.vala  day_05.vala  day_07.vala  day_08.vala  day_09.vala  day_10.vala  day_11.vala  day_12.vala  day_14.vala  day_16.vala  day_17.vala  day_19.vala  day_20.vala  day_21.vala  day_x.vala  main.vala  meson.build
2016/: meson.build
2016/subprojects/02/: Second1.vala  meson.build
2016/subprojects/Day 4: Security Through Obscurity/: meson.build
2016/subprojects/Day 5: How About a Nice Game of Chess/: hashangen1.vala  md5.vala
2016/subprojects/Day 6: Signals and Noise/: common.vala  meson.build  noise1.vala  noise2.vala
2016/subprojects/Day 7: Internet Protocol Version 7/: first.vala  second.vala
2016/subprojects/Day 8: Two-Factor Authentication/: meson.build
2016/subprojects/Day 9: Explosives in Cyberspace/: first.vala  second.vala
input/: test.txt
src/: commons.vala  day_01.vala  day_02.vala  day_03.vala  day_04.vala  day_05.vala  day_06.vala  day_07.vala  day_08.vala  day_09.vala  day_10.vala  day_11.vala  day_13.vala  day_14.vala  day_15.vala  day_18.vala  day_20.vala  day_x.vala  main.vala  meson.build
subprojects/01/: first.vala  meson.build
subprojects/02/: Second.vala  Second2.vala  meson.build
subprojects/Day 10: Balance Bots/: first.vala  meson.build
subprojects/Day 3: Squares With Three Sides/: Third.vala  meson.build
subprojects/Day 4: Security Through Obscurity/: Forth.vala
subprojects/Day 5: How About a Nice Game of Chess/: hashangen.vala  hashangen2.vala  meson.build
subprojects/Day 7: Internet Protocol Version 7/: common.vala  meson.build
subprojects/Day 8: Two-Factor Authentication/: common.vala  first.vala  second.vala
subprojects/Day 9: Explosives in Cyberspace/: common.vala  meson.build
