project('2016 Advent of Code', 'c', 'vala')


subproject('01')
subproject('02')
subproject('Day 3: Squares With Three Sides')
subproject('Day 4: Security Through Obscurity')
subproject('Day 5: How About a Nice Game of Chess')
subproject('Day 6: Signals and Noise')
subproject('Day 7: Internet Protocol Version 7')